# waichu

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.workflow  README.md  requests.http  rust-toolchain
.github/workflows/: lint-fmt.yml  test-build.yml
backend/: Cargo.toml  schema.sql  sqlx-data.json
backend/migrations/: 20201212120557_initial_setup.sql  20201223121035_message_type.sql  20201226125307_assets.sql
backend/src/: lib.rs  macros.rs  main.rs
backend/src/auth/: jwt.rs  mod.rs  models.rs  routes.rs
backend/src/gateway/: mod.rs  payloads.rs  ws_event_hooks.rs  ws_send.rs
backend/src/models/: message.rs  mod.rs  room.rs  user.rs
backend/src/routes/: assets.rs  auth.rs  message.rs  messages.rs  mod.rs  room.rs  rooms.rs  user.rs  users.rs
backend/src/services/: asset.rs  message.rs  message_service.rs  mod.rs  room.rs  room_service.rs  user.rs  user_service.rs
backend/src/utils/: anyhow_util.rs  asset.rs  db.rs  filters.rs  mod.rs  reply.rs  serializer.rs
backend/src/websocket/: handler.rs  mod.rs  models.rs
backend/tests/: main.rs
backend/tests/routes/: auth.rs  messages.rs  mod.rs  room.rs  users.rs
backend/tests/utils/: db.rs  mod.rs
backend/tests/utils/seeds/: room.rs  user.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/errors/: rest.rs
common/src/models/: asset.rs  message.rs  mod.rs  room.rs  room_member.rs  user.rs
common/src/models/websocket/: mod.rs
common/src/payloads/: mod.rs  rest.rs
frontend/: Cargo.toml  Trunk.toml  bootstrap.js  index.html  package-lock.json  package.json  styles.scss  webpack.config.js
frontend/src/: app.rs  lib.rs  main.rs
frontend/src/agents/: event_bus.rs
frontend/src/components/: auth.rs  create_message.rs  message_list.rs  messages.rs  mod.rs  room.rs  rooms_list.rs  single_message.rs  update_profile.rs  user_avatar.rs
frontend/src/components/login/: login.html  login.rs  mod.rs
frontend/src/components/main/: loading.html  main.html  main.rs  mod.rs
frontend/src/components/new_message/: message_create.html  mod.rs
frontend/src/models/: message.rs  mod.rs  room.rs  user.rs
frontend/src/services/: auth.rs  auth_service.rs  message_service.rs  mod.rs  request.rs  room.rs  rooms_service.rs  user.rs  user_service.rs
frontend/src/utils/: misc.rs  mod.rs  requests.rs
frontend/src/websocket/: agent.rs  internal_events.rs  mod.rs
frontend/static/: index.html
frontend/styles/: dark-mode.scss  mobile.scss  style.scss  styles.scss
src/: main.rs
