[package]
name = "backend"
version = "0.1.0"
authors = ["Hamza <muhammadhamza1311@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
warp = { version = "0.2", features = ["websocket", "compression"] }

anyhow = "1.0"

log = "0.4"
fern = "0.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

bcrypt = "0.9"
jsonwebtoken = "7.2"

chrono = "0.4"

http-api-problem = { version = "0.17", features = ["with-warp"] }

lazy_static = "1.4"

common = { path = "../common" }

[dependencies.sqlx]
version = "0.4"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "offline",
    "postgres",
    "uuid",
    "chrono", # todo see if time helps
    "json",
    "migrate",
]

[dev-dependencies]
tokio-test = "0.3"
