[package]
name = "common"
version = "0.1.0"
authors = ["Hamza <muhammadhamza1311@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
http = "0.2"
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
warp = "0.3"
sqlx = { git = "https://github.com/launchbadge/sqlx/" }
