[package]
name = "frontend"
version = "0.1.0"
authors = ["Hamza <muhammadhamza1311@gmail.com>"]
edition = "2018"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", branch = "master" }
yew-functional = { git = "https://github.com/yewstack/yew/" }
yew-router = { git = "https://github.com/yewstack/yew/" }
wasm-bindgen = "0.2"
reqwest = { version = "0.10", features = ["json"] }
anyhow = "1.0"
wasm-bindgen-futures = "0.4"
weblog = "0.4.0-beta.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
js-sys = "0.3"
yew-state = { git = "https://github.com/hamza1311/yew-state/", branch = "master-yew" }
lazy_static = "1.4"
wee_alloc = "0.4"

yew-material = { git = "https://github.com/hamza1311/yew-material/", features = ["full"] }
#yew-material = { path = "../../yew-material/yew-material", features = ["full"] }

common = { path = "../common" }

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z' # todo check if 's' is smaller
lto = true
